--- a/index.html
+++ b/index.html
@@ -1,11 +1,121 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Calculadora de Calificación Final</title>
+
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
+
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <style>
+    body { background: #f7f7fb; }
+    .score-display {
+      font-size: clamp(2rem, 5vw, 3.25rem);
+      font-weight: 800;
+      line-height: 1;
+    }
+    .muted-hint { font-size: .9rem; color: #6c757d; }
+  </style>
 </head>
 <body>
-    
+  <main class="container py-5">
+    <div class="row g-4 justify-content-center">
+      <div class="col-12 col-lg-8">
+        <div class="card shadow-sm border-0">
+          <div class="card-body p-4">
+            <h1 class="h3 mb-3">Calculadora de Calificación Final</h1>
+            <p class="text-muted mb-4">
+              Ingresa las tres notas parciales respetando sus máximos: 
+              <strong>30</strong>, <strong>30</strong> y <strong>40</strong>. La suma determina tu calificación final (0–100).
+            </p>
+
+            <form id="formNotas" class="row g-3" novalidate>
+              <div class="col-12 col-md-4">
+                <label for="parcial1" class="form-label">Nota 1.er Parcial <span class="text-muted">(máx. 30)</span></label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="parcial1"
+                  name="parcial1"
+                  inputmode="decimal"
+                  min="0" max="30" step="0.01"
+                  placeholder="0 a 30"
+                  aria-describedby="ayudaP1"
+                  required
+                />
+                <div id="ayudaP1" class="form-text muted-hint">Valor entre 0 y 30.</div>
+              </div>
+
+              <div class="col-12 col-md-4">
+                <label for="parcial2" class="form-label">Nota 2.º Parcial <span class="text-muted">(máx. 30)</span></label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="parcial2"
+                  name="parcial2"
+                  inputmode="decimal"
+                  min="0" max="30" step="0.01"
+                  placeholder="0 a 30"
+                  aria-describedby="ayudaP2"
+                  required
+                />
+                <div id="ayudaP2" class="form-text muted-hint">Valor entre 0 y 30.</div>
+              </div>
+
+              <div class="col-12 col-md-4">
+                <label for="parcial3" class="form-label">Nota 3.er Parcial <span class="text-muted">(máx. 40)</span></label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="parcial3"
+                  name="parcial3"
+                  inputmode="decimal"
+                  min="0" max="40" step="0.01"
+                  placeholder="0 a 40"
+                  aria-describedby="ayudaP3"
+                  required
+                />
+                <div id="ayudaP3" class="form-text muted-hint">Valor entre 0 y 40.</div>
+              </div>
+
+              <div class="col-12 d-flex gap-2 pt-2">
+                <button type="button" id="btnCalcular" class="btn btn-primary">
+                  Calcular
+                </button>
+                <button type="button" id="btnLimpiar" class="btn btn-outline-secondary">
+                  Limpiar
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-12 col-lg-8">
+        <div id="cardResultado" class="card border-0 shadow-sm d-none">
+          <div class="card-body p-4 d-flex flex-column flex-md-row align-items-md-center justify-content-between">
+            <div>
+              <h2 class="h5 text-muted mb-1">Resultado Final</h2>
+              <div id="scoreValor" class="score-display">—</div>
+            </div>
+            <div class="mt-3 mt-md-0">
+              <span id="badgeCategoria" class="badge rounded-pill fs-6 px-3 py-2">—</span>
+              <div id="textoCategoria" class="mt-2 text-muted"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <script src="./app.js"></script>
 </body>
 </html>
